# flask-template-refs

./: README.md  pyproject.toml
flask_template_refs/: ftr.py
templates_refs/: __init__.py  errors.py  flask_templates_refs.py  jinja_templates_refs.py  map_templates.py  references.py  references.pyi
test_app/: __init__.py
tests/: conftest.py  test_extension.py
